--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.github.jovenpableo.friendtag.MainActivity">
-<!--
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="233dp"
@@ -16,10 +16,6 @@
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
         android:layout_marginBottom="232dp"
-        android:onClick="onSignupClick"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
--->
+        android:onClick="onSignupClick" />
+
 </android.support.constraint.ConstraintLayout>
