commit friends database without backend data

--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.github.jovenpableo.friendtag.FriendsActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list_view"
+        android:orientation="vertical"></LinearLayout>
+
 </ScrollView>
