--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/profile_layout"
     tools:context="com.github.jovenpableo.friendtag.ProfileActivity">
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_height="71dp"
         android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         android:gravity="fill_horizontal"
@@ -22,6 +22,7 @@
         android:textSize="20sp"
         app:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textName1" />
 
@@ -44,7 +45,7 @@
     <TextView
         android:id="@+id/textName1"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginStart="42dp"
         android:layout_marginLeft="42dp"
         android:layout_marginTop="8dp"
@@ -84,15 +85,47 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="59dp"
         android:layout_height="67dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:clickable="true"
         android:tint="@color/common_google_signin_btn_text_dark_default"
         app:backgroundTint="@color/colorPrimary"
+        app:elevation="16dp"
         app:fabSize="normal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageAvatar"
         app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="@color/colorAccent"
         app:srcCompat="@mipmap/email" />
+
+    <TextView
+        android:id="@+id/textTagPoints"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginLeft="42dp"
+        android:gravity="right"
+        android:text="TAGS"
+        android:textColor="@color/design_default_color_primary_dark"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textName1" />
+
+    <TextView
+        android:id="@+id/textTaggedPoints"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
+        android:text="TAGS"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textName1" />
+
 </android.support.constraint.ConstraintLayout>
