integrated friends feature with backend

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -16,6 +16,12 @@
         tools:context="com.github.jovenpableo.friendtag.MapActivity"
         />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="changeToFriends"/>
+
 </FrameLayout>
 
 
