--- a/app/src/main/res/layout/friends_view.xml
+++ b/app/src/main/res/layout/friends_view.xml
@@ -39,12 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:text="NEARBY"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
     <ImageView
+        android:id="@+id/picture"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginLeft="5dp"
