--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,9 +17,29 @@
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         android:gravity="fill_horizontal"
-        android:text="Hello! This is my hard coded bio."
+        android:text="@string/dummy_bio"
         android:textAllCaps="false"
         android:textSize="20sp"
+        app:fontFamily="sans-serif"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textName1" />
+
+    <EditText
+        android:id="@+id/editBio"
+        android:layout_width="308dp"
+        android:layout_height="199dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
+        android:gravity="fill_horizontal"
+        android:text="@string/dummy_bio"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:visibility="gone"
         app:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
