--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -74,6 +74,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
+        android:onClick="onTagClick"
         android:text="Tag!"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="24sp"
