--- a/app/src/main/res/layout/friends_view.xml
+++ b/app/src/main/res/layout/friends_view.xml
@@ -12,37 +12,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:text="NAME"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="310dp"
         android:layout_marginTop="40dp"
+        android:gravity="center"
         android:text="TAGS/"
-        android:textColor="@android:color/holo_green_dark" />
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="16dp" />
 
     <TextView
-        android:id="@+id/tag_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="40dp"
-        android:text="TAGS BACK"
-        android:textColor="@android:color/holo_red_dark" />
-
-    <TextView
-        android:id="@+id/nearby"
+        android:id="@+id/textDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="NEARBY"
         android:textColor="@android:color/black"
-        android:textStyle="bold" />
+        android:textSize="18dp"
+        android:textStyle="normal" />
 
     <ImageView
         android:id="@+id/picture"
