--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -127,12 +127,13 @@
         android:id="@+id/textTagPoints"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
-        android:layout_marginLeft="42dp"
-        android:gravity="right"
-        android:text="TAGS"
+        android:layout_marginStart="132dp"
+        android:layout_marginLeft="116dp"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+        android:text="0"
         android:textColor="@color/design_default_color_primary_dark"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textName1" />
